# lv_terminal

./: .gitmodules  CMakeLists.txt  CMakeLists.txt.eventlooper  CMakeLists.txt.ssh2  README.md  README.zh-CN.md  sdkconfig  sdkconfig.bak  sdkconfig.old
main/: CMakeLists.txt  app_main.c  courier_16.c  courier_24.c  ic_back.c  ps2.c  ps2.h  ring_buf.c  ring_buf.h  term.c  term.h  term_app.c  term_app.h  term_app_chess.c  term_app_login.c  term_app_wifi_list.c  term_ssh.c  term_ssh.h  term_util.c
